# quick-guide-rust-programming

./: Cargo.toml  README.md
src/: main.rs
src/array_slice/: main.rs
src/as/: main.rs
src/closure/: main.rs
src/enum/: main.rs
src/enum_basic/: enum.c  main.rs
src/enum_data/: main.rs
src/error/: main.rs  mycommand.rs
src/expr/: main.rs
src/function_for/: main.rs
src/function_pointer/: main.rs
src/functional_closure_nocapture/: main.rs
src/functional_closure_nocapture/ex/: main.rs
src/functional_filter/: main.rs
src/functional_filter/ex/: main.rs
src/functional_function_pointer/: main.rs
src/functional_iterator/: main.rs
src/functional_iterator/ex/: main.rs
src/functional_map/: main.rs
src/functional_map_debugging/: main.rs
src/functional_map_inspect/: main.rs
src/functional_map_option/: main.rs
src/functional_map_result/: main.rs
src/functional_reduce/: main.rs
src/generic_struct/: main.rs
src/generic_trait/: main.rs
src/generic_trait_struct/: main.rs
src/if/: main.rs
src/lifetime/: main.rs
src/map/: main.rs
src/match/: main.rs
src/mutable_var/: main.rs
src/option_enum/: main.rs
src/ownership/: main.rs
src/ownership_move/: main.rs
src/ownership_scope/: main.rs
src/project/: main.rs  my_module.rs
src/project/second_mod/: mod.rs  sec_mod_file.rs
src/project_step1/: main.rs
src/result_enum/: main.rs
src/result_noreturn/: main.rs
src/serial_project_step0/: main.rs
src/serial_project_step1/: main.rs
src/serial_project_step2/: customerid.rs  expiredate.rs  main.rs  productid.rs  userid.rs  util.rs
src/serial_project_step3/: customerid.rs  customertype.rs  expiredate.rs  main.rs  productid.rs  userid.rs
src/serial_project_step4/: customerid.rs  customertype.rs  expiredate.rs  main.rs  productid.rs
src/serial_project_step5/: customerid.rs  customertype.rs  expiredate.rs  main.rs  productid.rs  serial.conf
src/smart_pointer_application/: main.rs
src/smart_pointer_basic/: main.rs
src/smart_pointer_basic/ex/: main.rs
src/std_library_file/: main.rs
src/std_library_hashmap/: main.rs
src/std_library_hashmap_simple/: main.rs
src/std_library_vec/: main.rs
src/std_trait_display_debug/: main.rs
src/std_trait_iterator/: main.rs
src/std_trait_ordering/: main.rs
src/std_trait_partialeq_eq/: main.rs
src/std_trait_tryfrom/: main.rs
src/string/: main.rs
src/struct/: main.rs
src/struct_define/: main.rs
src/struct_method/: main.rs
src/trait/: main.rs
src/trait_clone/: main.rs
src/trait_debug/: main.rs
src/trait_default/: main.rs
src/trait_display/: main.rs
src/trait_from/: main.rs
src/trait_iterator/: main.rs
src/trait_iterator_iter_mut/: main.rs
src/trait_partialeq_assert/: main.rs
src/trait_partialeq_eq/: main.rs
src/trait_partialeq_eq_hashmap/: main.rs
src/trait_partialeq_first/: main.rs
src/trait_partialord_sort_second/: main.rs
src/trait_tryfrom/: main.rs
src/try_operator/: main.rs
tests/: crate_clap.rs  functional_closure_capture.rs  functional_closure_nocapture.rs  functional_filter.rs  functional_iterator.rs  smart_pointer_basic.rs
text/: 00_intro.md  01_start.md  02_basic.md  03_functional.md  03_lib_traits.md  03_trait.md  03_trait_generic.md  04_future_work.md  04_generic.md  04_generic_lifetime.md  04_tiny_project.md  04_trait.md  05_generic_lifetime.md  05_smart_pointer.md  05_std.md  06_smart_pointer.md  07_std.md  08_cargo.md  88_tiny_project.md  99_future_work.md
text/09_tiny_project/: 09_00_intro.md  09_01_encrypt.md  09_02_plugin_drivers.md  09_03_command_option.md  09_03_more_drivers.md  09_04_command_option.md  09_04_conf_file.md  09_05_conf_file.md
