[package]
name = "my-rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "function_for"
path = "src/function_for/main.rs"

[[bin]]
name = "if_return_value"
path = "src/if/main.rs"

[[bin]]
name = "mutable_var"
path = "src/mutable_var/main.rs"

[[bin]]
name = "as"
path = "src/as/main.rs"

[[bin]]
name = "match"
path = "src/match/main.rs"

[[bin]]
name = "expr"
path = "src/expr/main.rs"

[[bin]]
name = "array_slice"
path = "src/array_slice/main.rs"

[[bin]]
name = "string"
path = "src/string/main.rs"

[[bin]]
name = "ownership"
path = "src/ownership/main.rs"

[[bin]]
name = "struct"
path = "src/struct/main.rs"

[[bin]]
name = "enum"
path = "src/enum/main.rs"

[[bin]]
name = "result_enum"
path = "src/result_enum/main.rs"

[[bin]]
name = "option_enum"
path = "src/option_enum/main.rs"

[[bin]]
name = "try_operator"
path = "src/try_operator/main.rs"

[[bin]]
name = "function_pointer"
path = "src/function_pointer/main.rs"

[[bin]]
name = "map"
path = "src/map/main.rs"

[[bin]]
name = "project"
path = "src/project/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "trait_display"
path = "src/trait_display/main.rs"

[[bin]]
name = "trait_debug"
path = "src/trait_debug/main.rs"

[[bin]]
name = "trait_clone"
path = "src/trait_clone/main.rs"

[[bin]]
name = "trait_default"
path = "src/trait_default/main.rs"

[[bin]]
name = "trait_partialeq"
path = "src/trait_partialeq/main.rs"