[package]
name = "my-rust-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "function_for"
path = "src/function_for/main.rs"

[[bin]]
name = "if_return_value"
path = "src/if/main.rs"

[[bin]]
name = "mutable_var"
path = "src/mutable_var/main.rs"

[[bin]]
name = "as"
path = "src/as/main.rs"

[[bin]]
name = "match"
path = "src/match/main.rs"

[[bin]]
name = "expr"
path = "src/expr/main.rs"

[[bin]]
name = "array_slice"
path = "src/array_slice/main.rs"

[[bin]]
name = "string"
path = "src/string/main.rs"

[[bin]]
name = "ownership_scope"
path = "src/ownership_scope/main.rs"

[[bin]]
name = "ownership_move"
path = "src/ownership_move/main.rs"

[[bin]]
name = "struct_define"
path = "src/struct_define/main.rs"

[[bin]]
name = "struct_method"
path = "src/struct_method/main.rs"

[[bin]]
name = "enum_basic"
path = "src/enum_basic/main.rs"

[[bin]]
name = "enum_data"
path = "src/enum_data/main.rs"

[[bin]]
name = "result_enum"
path = "src/result_enum/main.rs"

[[bin]]
name = "result_noreturn"
path = "src/result_noreturn/main.rs"

[[bin]]
name = "option_enum"
path = "src/option_enum/main.rs"

[[bin]]
name = "try_operator"
path = "src/try_operator/main.rs"

[[bin]]
name = "function_pointer"
path = "src/function_pointer/main.rs"

[[bin]]
name = "closure"
path = "src/closure/main.rs"

[[bin]]
name = "map"
path = "src/map/main.rs"

[[bin]]
name = "map_option"
path = "src/map_option/main.rs"

[[bin]]
name = "map_result"
path = "src/map_result/main.rs"

[[bin]]
name = "project"
path = "src/project/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "trait_display"
path = "src/trait_display/main.rs"

[[bin]]
name = "trait_debug"
path = "src/trait_debug/main.rs"

[[bin]]
name = "trait_clone"
path = "src/trait_clone/main.rs"

[[bin]]
name = "trait_default"
path = "src/trait_default/main.rs"

[[bin]]
name = "trait_partialeq_first"
path = "src/trait_partialeq_first/main.rs"

[[bin]]
name = "trait_partialeq_second"
path = "src/trait_partialeq_second/main.rs"

[[bin]]
name = "trait_partialeq_eq"
path = "src/trait_partialeq_eq/main.rs"

[[bin]]
name = "generic_struct"
path = "src/generic_struct/main.rs"

[[bin]]
name = "generic_trait"
path = "src/generic_trait/main.rs"

[[bin]]
name = "generic_trait_struct"
path = "src/generic_trait_struct/main.rs"

[[bin]]
name = "lifetime"
path = "src/lifetime/main.rs"

[[bin]]
name = "error"
path = "src/error/main.rs"

[[bin]]
name = "std_library_vec"
path = "src/std_library_vec/main.rs"

[[bin]]
name = "std_trait_display_debug"
path = "src/std_trait_display_debug/main.rs"

[[bin]]
name = "std_trait_partialeq_eq"
path = "src/std_trait_partialeq_eq/main.rs"

[[bin]]
name = "std_trait_ordering"
path = "src/std_trait_ordering/main.rs"

[[bin]]
name = "std_trait_iterator"
path = "src/std_trait_iterator/main.rs"

[[bin]]
name = "std_library_hashmap"
path = "src/std_library_hashmap/main.rs"

[[bin]]
name = "std_library_file"
path = "src/std_library_file/main.rs"

[[bin]]
name = "std_trait_tryfrom"
path = "src/std_trait_tryfrom/main.rs"